--- a/style.css
+++ b/style.css
@@ -127,3 +127,45 @@ input[type=checkbox]:checked:before {
   top: 33px;
   right: 10px;
 }
+
+.form-group--error {
+  animation-name: shakeError;
+  animation-fill-mode: forward;
+  animation-duration: .6s;
+  animation-timing-function: ease-in-out;
+}
+
+.form-group--error .form__label, .form-group--error .form__label--inline {
+  color: #f04124;
+}
+
+.form-group--error input, .form-group--error textarea, .form-group--error input:focus, .form-group--error input:hover {
+  border-color: #f79483;
+}
+
+@keyframes shakeError {
+  0% {
+    transform: translateX(0);
+  }
+  15% {
+    transform: translateX(0.375rem);
+  }
+  30% {
+    transform: translateX(-0.375rem);
+  }
+  45% {
+    transform: translateX(0.375rem);
+  }
+  60% {
+    transform: translateX(-0.375rem);
+  }
+  75% {
+    transform: translateX(0.375rem);
+  }
+  90% {
+    transform: translateX(-0.375rem);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
