--- a/style.css
+++ b/style.css
@@ -143,6 +143,10 @@ input[type=checkbox]:checked:before {
   border-color: #f79483;
 }
 
+.form-group--valid .form__label, .form-group--valid .form__label--inline {
+  color: #41B883;
+}
+
 .form-group--valid input, .form-group--valid input:focus, .form-group--valid input:hover {
   border-color: #41B883;
 }
